[package]
name = "Minimum-vertex-cover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="vertex"
path="src/lib.rs"

[dependencies]
round = "0.1.2"
graphalgs = "0.1.1"
petgraph = "0.6.4"
graph = { git = "https://github.com/umons-dept-comp-sci/PhoegRustGraph.git" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4.31", features = [] }
itertools = "0.12.0"
